--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,7 +1,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mật mã dân sự - SmartSign Trust your creation</title>
+    
+    <!-- SEO and Social Sharing Tags -->
+    <title><%= seo.title %></title>
+    <meta name="description" content="<%= seo.description %>">
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="<%= seo.title %>">
+    <meta property="og:description" content="<%= seo.description %>">
+    <!-- <meta property="og:image" content="URL_TO_YOUR_IMAGE"> -->
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:title" content="<%= seo.title %>">
+    <meta property="twitter:description" content="<%= seo.description %>">
+    <!-- <meta property="twitter:image" content="URL_TO_YOUR_IMAGE"> -->
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/_vendor.css">
     <link rel="stylesheet" href="/css/index-css.css">
