feat: Optimize mobile display

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="/css/index-css.css">
     <link rel="stylesheet" href="/css/swiper-css.css">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/responsive.css">
     <link rel="icon" href="/images/cropped-icon-web-32x32.jpg" sizes="32x32">
     <link rel="icon" href="/images/cropped-icon-web-192x192.jpg" sizes="192x192">
     <link rel="apple-touch-icon" href="/images/cropped-icon-web-180x180.jpg">
