--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,34 +1,40 @@
-<header id="header" class="site-header elegant-header">
+<header id="header" class="site-header elegant-header navbar navbar-expand-lg">
     <div class="container header-inner">
         <div class="site-branding fade-in">
-            <a href="/" class="custom-logo-link" rel="home">
+            <a href="/" class="custom-logo-link navbar-brand" rel="home">
                 <img src="/images/smart-sign-logo.png" alt="SmartSign Logo" loading="lazy" decoding="async" width="200" height="60">
             </a>
         </div>
 
-        <nav class="main-navigation show-for-large slide-in">
-            <ul>
-                <li><a href="/">Trang chủ</a></li>
-                <li><a href="/tin-tuc">Tin tức</a></li>
-                <li><a href="/huong-dan">Hướng dẫn</a></li>
-                <li><a href="/cong-ty">Công ty</a></li>
-            </ul>
-        </nav>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainMenuCollapse" aria-controls="mainMenuCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-        <div class="hb_header_button fade-in-right">
-            <a class="shop _header-button" href="mailto:info@smartsign.com.vn" title="Gửi email">
-                <div class="_svg">
-                    <i class="fa-solid fa-envelope"></i>
-                </div>
-                <div class="_title">info@smartsign.com.vn</div>
-            </a>
+        <div class="collapse navbar-collapse" id="mainMenuCollapse">
+            <nav class="main-navigation ms-auto">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link" href="/">Trang chủ</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/tin-tuc">Tin tức</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/huong-dan">Hướng dẫn</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/cong-ty">Công ty</a></li>
+                </ul>
+            </nav>
 
-            <a class="phone _header-button" href="tel:19006276" title="Liên hệ">
-                <div class="_images">
-                    <img width="38" height="39" src="/images/Group-2144769829.png" alt="Phone Icon">
-                </div>
-                <div class="_title">19006276 - 19006676</div>
-            </a>
+            <div class="hb_header_button">
+                <a class="shop _header-button" href="mailto:info@smartsign.com.vn" title="Gửi email">
+                    <div class="_svg">
+                        <i class="fa-solid fa-envelope"></i>
+                    </div>
+                    <div class="_title d-none d-xl-block">info@smartsign.com.vn</div>
+                </a>
+
+                <a class="phone _header-button" href="tel:19006276" title="Liên hệ">
+                    <div class="_images">
+                        <img width="38" height="39" src="/images/Group-2144769829.png" alt="Phone Icon">
+                    </div>
+                    <div class="_title d-none d-xl-block">19006276 - 19006676</div>
+                </a>
+            </div>
         </div>
     </div>
 </header>
