feat: Use local image files

--- a/views/company.ejs
+++ b/views/company.ejs
@@ -30,11 +30,11 @@
                     </div>
                     <picture class="breadcrumb-bg">
                         <source
-                            srcset="https://smartsign.com.vn/wp-content/uploads/2025/10/Group-2144770333-1920x600.jpg"
+                            srcset="/images/Group-2144770333-1920x600.jpg"
                             media="(min-width: 1024px)">
-                        <source srcset="https://smartsign.com.vn/wp-content/uploads/2025/10/Group-2144770333-scaled.jpg"
+                        <source srcset="/images/Group-2144770333-scaled.jpg"
                             media="(min-width: 768px)"><img width="2560" height="800"
-                            src="https://smartsign.com.vn/wp-content/uploads/2025/10/Group-2144770333-scaled.jpg"
+                            src="/images/Group-2144770333-scaled.jpg"
                             alt="Group 2144770333" loading="lazy" class="lazy" decoding="async">
                     </picture>
                 </section>
@@ -44,16 +44,16 @@
                         <div class="cell cell-images">
                             <span class="img desktop-img">
                                 <img width="2560" height="991"
-                                    src="https://smartsign.com.vn/wp-content/uploads/2025/10/Group-2144770227-1-scaled.jpg"
+                                    src="/images/Group-2144770227-1-scaled.jpg"
                                     class="attachment-full size-full" alt="Group 2144770227 (1)" decoding="async"
-                                    srcset="https://smartsign.com.vn/wp-content/uploads/2025/10/Group-2144770227-1-scaled.jpg 2560w, https://smartsign.com.vn/wp-content/uploads/2025/10/Group-2144770227-1-640x248.jpg 640w, https://smartsign.com.vn/wp-content/uploads/2025/10/Group-2144770227-1-1024x396.jpg 1024w, https://smartsign.com.vn/wp-content/uploads/2025/10/Group-2144770227-1-320x124.jpg 320w, https://smartsign.com.vn/wp-content/uploads/2025/10/Group-2144770227-1-1920x743.jpg 1920w, https://smartsign.com.vn/wp-content/uploads/2025/10/Group-2144770227-1-1200x465.jpg 1200w"
+                                    srcset="/images/Group-2144770227-1-scaled.jpg 2560w, /images/Group-2144770227-1-640x248.jpg 640w, /images/Group-2144770227-1-1024x396.jpg 1024w, /images/Group-2144770227-1-320x124.jpg 320w, /images/Group-2144770227-1-1920x743.jpg 1920w, /images/Group-2144770227-1-1200x465.jpg 1200w"
                                     sizes="(max-width: 2560px) 100vw, 2560px">
                             </span>
                             <span class="img mobile-img">
                                 <img width="2560" height="991"
-                                    src="https://smartsign.com.vn/wp-content/uploads/2025/10/Group-2144770227-1-scaled.jpg"
+                                    src="/images/Group-2144770227-1-scaled.jpg"
                                     class="attachment-full size-full" alt="Group 2144770227 (1)" decoding="async"
-                                    srcset="https://smartsign.com.vn/wp-content/uploads/2025/10/Group-2144770227-1-scaled.jpg 2560w, https://smartsign.com.vn/wp-content/uploads/2025/10/Group-2144770227-1-640x248.jpg 640w, https://smartsign.com.vn/wp-content/uploads/2025/10/Group-2144770227-1-1024x396.jpg 1024w, https://smartsign.com.vn/wp-content/uploads/2025/10/Group-2144770227-1-320x124.jpg 320w, https://smartsign.com.vn/wp-content/uploads/2025/10/Group-2144770227-1-1920x743.jpg 1920w, https://smartsign.com.vn/wp-content/uploads/2025/10/Group-2144770227-1-1200x465.jpg 1200w"
+                                    srcset="/images/Group-2144770227-1-scaled.jpg 2560w, /images/Group-2144770227-1-640x248.jpg 640w, /images/Group-2144770227-1-1024x396.jpg 1024w, /images/Group-2144770227-1-320x124.jpg 320w, /images/Group-2144770227-1-1920x743.jpg 1920w, /images/Group-2144770227-1-1200x465.jpg 1200w"
                                     sizes="(max-width: 2560px) 100vw, 2560px">
                             </span>
                         </div>
@@ -91,11 +91,11 @@
                                 <div class="cell cell-right">
                                     <figure class="_images">
                                         <img width="2560" height="1709"
-                                            src="https://smartsign.com.vn/wp-content/uploads/2025/10/98947dfe46102614e426bf4c79b85787eca9ded4-1.jpg"
+                                            src="/images/98947dfe46102614e426bf4c79b85787eca9ded4-1.jpg"
                                             class="attachment-full size-full"
                                             alt="98947dfe46102614e426bf4c79b85787eca9ded4 (1)" decoding="async"
                                             loading="lazy"
-                                            srcset="https://smartsign.com.vn/wp-content/uploads/2025/10/98947dfe46102614e426bf4c79b85787eca9ded4-1.jpg 2560w, https://smartsign.com.vn/wp-content/uploads/2025/10/98947dfe46102614e426bf4c79b85787eca9ded4-1-640x427.jpg 640w, https://smartsign.com.vn/wp-content/uploads/2025/10/98947dfe46102614e426bf4c79b85787eca9ded4-1-1024x684.jpg 1024w, https://smartsign.com.vn/wp-content/uploads/2025/10/98947dfe46102614e426bf4c79b85787eca9ded4-1-320x214.jpg 320w, https://smartsign.com.vn/wp-content/uploads/2025/10/98947dfe46102614e426bf4c79b85787eca9ded4-1-1920x1282.jpg 1920w, https://smartsign.com.vn/wp-content/uploads/2025/10/98947dfe46102614e426bf4c79b85787eca9ded4-1-1200x801.jpg 1200w"
+                                            srcset="/images/98947dfe46102614e426bf4c79b85787eca9ded4-1.jpg 2560w, /images/98947dfe46102614e426bf4c79b85787eca9ded4-1-640x427.jpg 640w, /images/98947dfe46102614e426bf4c79b85787eca9ded4-1-1024x684.jpg 1024w, /images/98947dfe46102614e426bf4c79b85787eca9ded4-1-320x214.jpg 320w, /images/98947dfe46102614e426bf4c79b85787eca9ded4-1-1920x1282.jpg 1920w, /images/98947dfe46102614e426bf4c79b85787eca9ded4-1-1200x801.jpg 1200w"
                                             sizes="(max-width: 2560px) 100vw, 2560px">
                                     </figure>
                                 </div>
@@ -114,11 +114,11 @@
                                 <div class="cell cell-left">
                                     <figure class="_images">
                                         <img width="996" height="847"
-                                            src="https://smartsign.com.vn/wp-content/uploads/2025/10/b99cfcb4a4a98f2329a0cc460204aad82b1146b9.jpg"
+                                            src="/images/b99cfcb4a4a98f2329a0cc460204aad82b1146b9.jpg"
                                             class="attachment-full size-full"
                                             alt="b99cfcb4a4a98f2329a0cc460204aad82b1146b9" decoding="async"
                                             loading="lazy"
-                                            srcset="https://smartsign.com.vn/wp-content/uploads/2025/10/b99cfcb4a4a98f2329a0cc460204aad82b1146b9.jpg 996w, https://smartsign.com.vn/wp-content/uploads/2025/10/b99cfcb4a4a98f2329a0cc460204aad82b1146b9-640x544.jpg 640w, https://smartsign.com.vn/wp-content/uploads/2025/10/b99cfcb4a4a98f2329a0cc460204aad82b1146b9-320x272.jpg 320w"
+                                            srcset="/images/b99cfcb4a4a98f2329a0cc460204aad82b1146b9.jpg 996w, /images/b99cfcb4a4a98f2329a0cc460204aad82b1146b9-640x544.jpg 640w, /images/b99cfcb4a4a98f2329a0cc460204aad82b1146b9-320x272.jpg 320w"
                                             sizes="(max-width: 996px) 100vw, 996px">
                                     </figure>
                                 </div>
@@ -127,7 +127,7 @@
                                         <div class="_item">
                                             <figure class="_images">
                                                 <img width="150" height="147"
-                                                    src="https://smartsign.com.vn/wp-content/uploads/2025/10/Group-2144770297.png"
+                                                    src="/images/Group-2144770297.png"
                                                     class="attachment-full size-full" alt="Group 2144770297"
                                                     decoding="async" loading="lazy">
                                             </figure>
@@ -138,7 +138,7 @@
                                         <div class="_item">
                                             <figure class="_images">
                                                 <img width="150" height="148"
-                                                    src="https://smartsign.com.vn/wp-content/uploads/2025/10/Group-2144770298.png"
+                                                    src="/images/Group-2144770298.png"
                                                     class="attachment-full size-full" alt="Group 2144770298"
                                                     decoding="async" loading="lazy">
                                             </figure>
@@ -151,7 +151,7 @@
                                         <div class="_item">
                                             <figure class="_images">
                                                 <img width="150" height="146"
-                                                    src="https://smartsign.com.vn/wp-content/uploads/2025/10/Group-2144770299.png"
+                                                    src="/images/Group-2144770299.png"
                                                     class="attachment-full size-full" alt="Group 2144770299"
                                                     decoding="async" loading="lazy">
                                             </figure>
@@ -162,7 +162,7 @@
                                         <div class="_item">
                                             <figure class="_images">
                                                 <img width="149" height="147"
-                                                    src="https://smartsign.com.vn/wp-content/uploads/2025/10/Group-2144770300.png"
+                                                    src="/images/Group-2144770300.png"
                                                     class="attachment-full size-full" alt="Group 2144770300"
                                                     decoding="async" loading="lazy">
                                             </figure>
@@ -180,18 +180,18 @@
                         <div class="cell cell-images">
                             <span class="img desktop-img">
                                 <img width="2560" height="991"
-                                    src="https://smartsign.com.vn/wp-content/uploads/2025/10/Group-2144770227-1-scaled.jpg"
+                                    src="/images/Group-2144770227-1-scaled.jpg"
                                     class="attachment-full size-full" alt="Group 2144770227 (1)" decoding="async"
                                     loading="lazy"
-                                    srcset="https://smartsign.com.vn/wp-content/uploads/2025/10/Group-2144770227-1-scaled.jpg 2560w, https://smartsign.com.vn/wp-content/uploads/2025/10/Group-2144770227-1-640x248.jpg 640w, https://smartsign.com.vn/wp-content/uploads/2025/10/Group-2144770227-1-1024x396.jpg 1024w, https://smartsign.com.vn/wp-content/uploads/2025/10/Group-2144770227-1-320x124.jpg 320w, https://smartsign.com.vn/wp-content/uploads/2025/10/Group-2144770227-1-1920x743.jpg 1920w, https://smartsign.com.vn/wp-content/uploads/2025/10/Group-2144770227-1-1200x465.jpg 1200w"
+                                    srcset="/images/Group-2144770227-1-scaled.jpg 2560w, /images/Group-2144770227-1-640x248.jpg 640w, /images/Group-2144770227-1-1024x396.jpg 1024w, /images/G-2144770227-1-320x124.jpg 320w, /images/Group-2144770227-1-1920x743.jpg 1920w, /images/Group-2144770227-1-1200x465.jpg 1200w"
                                     sizes="(max-width: 2560px) 100vw, 2560px">
                             </span>
                             <span class="img mobile-img">
                                 <img width="2560" height="991"
-                                    src="https://smartsign.com.vn/wp-content/uploads/2025/10/Group-2144770227-1-scaled.jpg"
+                                    src="/images/Group-2144770227-1-scaled.jpg"
                                     class="attachment-full size-full" alt="Group 2144770227 (1)" decoding="async"
                                     loading="lazy"
-                                    srcset="https://smartsign.com.vn/wp-content/uploads/2025/10/Group-2144770227-1-scaled.jpg 2560w, https://smartsign.com.vn/wp-content/uploads/2025/10/Group-2144770227-1-640x248.jpg 640w, https://smartsign.com.vn/wp-content/uploads/2025/10/Group-2144770227-1-1024x396.jpg 1024w, https://smartsign.com.vn/wp-content/uploads/2025/10/Group-2144770227-1-320x124.jpg 320w, https://smartsign.com.vn/wp-content/uploads/2025/10/Group-2144770227-1-1920x743.jpg 1920w, https://smartsign.com.vn/wp-content/uploads/2025/10/Group-2144770227-1-1200x465.jpg 1200w"
+                                    srcset="/images/Group-2144770227-1-scaled.jpg 2560w, /images/Group-2144770227-1-640x248.jpg 640w, /images/Group-2144770227-1-1024x396.jpg 1024w, /images/Group-2144770227-1-320x124.jpg 320w, /images/Group-2144770227-1-1920x743.jpg 1920w, /images/Group-2144770227-1-1200x465.jpg 1200w"
                                     sizes="(max-width: 2560px) 100vw, 2560px">
                             </span>
                         </div>
