--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -7,8 +7,8 @@
 			<div class="cell cell-box-1">
 
 				<div class="_logo">
-					<a title="SmartSign Trust your creation" href="https://smartsign.com.vn">
-						<img src="/images/smart-sign-logo-1920x605.webp" width="1920" height="605"
+					<a title="SmartSign Trust your creation" href="/">
+						<img src="/images/smart-sign-logo-1920x605.png" width="1920" height="605"
 							alt="SmartSign – Trust your creation" loading="lazy" decoding="async" class="default-logo">
 					</a>
 				</div>
@@ -30,35 +30,35 @@
 				<ul class="footer-icon-list">
 					<li>
 						<div class="footer-img"><img width="84" height="84"
-								src="https://smartsign.com.vn/wp-content/uploads/2025/10/Group-2144770292.png"
+								src="/images/Group-2144770292.png"
 								alt="Group 2144770292" loading="lazy" decoding="async"></div><a class="_button"
 							href="https://www.facebook.com/share/17FHmK8sk2/" title="" target="_blank"
 							rel="noopener noreferrer nofollow"></a>
 					</li>
 					<li>
 						<div class="footer-img"><img width="84" height="84"
-								src="https://smartsign.com.vn/wp-content/uploads/2025/10/Group-2144770293.png"
+								src="/images/Group-2144770293.png"
 								alt="Group 2144770293" loading="lazy" decoding="async"></div><a class="_button"
 							href="https://www.youtube.com/" title="" target="_blank"
 							rel="noopener noreferrer nofollow"></a>
 					</li>
 					<li>
 						<div class="footer-img"><img width="84" height="84"
-								src="https://smartsign.com.vn/wp-content/uploads/2025/10/Group-2144770294.png"
+								src="/images/Group-2144770294.png"
 								alt="Group 2144770294" loading="lazy" decoding="async"></div><a class="_button"
 							href="https://www.instagram.com/" title="" target="_blank"
 							rel="noopener noreferrer nofollow"></a>
 					</li>
 					<li>
 						<div class="footer-img"><img width="84" height="84"
-								src="https://smartsign.com.vn/wp-content/uploads/2025/10/Group-2144770295.png"
+								src="/images/Group-2144770295.png"
 								alt="Group 2144770295" loading="lazy" decoding="async"></div><a class="_button"
 							href="https://www.tiktok.com/" title="" target="_blank"
 							rel="noopener noreferrer nofollow"></a>
 					</li>
 					<li>
 						<div class="footer-img"><img width="84" height="84"
-								src="https://smartsign.com.vn/wp-content/uploads/2025/10/Group-2144770296.png"
+								src="/images/Group-2144770296.png"
 								alt="Group 2144770296" loading="lazy" decoding="async"></div><a class="_button"
 							href="https://twitter.com" title="" target="_blank" rel="noopener noreferrer nofollow"></a>
 					</li>
