feat: add sitemap and seo optimized

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,7 @@
           </div>
           <div class="breadcrumb-lists-button">
             <div class="_item">
-              <a class="register_home2 btn btn-primary" href="#" title="Đăng ký tư vấn">Đăng ký tư vấn<i
+              <a class="register_home2 btn btn-primary" href="#wpcf7-f17152-p16786-o1" title="Đăng ký tư vấn">Đăng ký tư vấn<i
                   class="fa-solid fa-arrow-right"></i></a>
             </div>
             <div class="_item">
@@ -39,18 +39,18 @@
               <div class="cell cell-left">
                 <figure class="_images">
                   <img width="1344" height="768" src="/images/GIAY-PHEP-MAT-MA-DAN-SU.jpg"
-                    class="attachment-full size-full" alt="GIAY PHEP MAT MA DAN SU" decoding="async"
+                    class="attachment-full size-full" alt="Mẫu giấy phép kinh doanh sản phẩm mật mã dân sự" decoding="async"
                     srcset="/images/GIAY-PHEP-MAT-MA-DAN-SU.jpg 1229w, /images/GIAY-PHEP-MAT-MA-DAN-SU-640x914.jpg 640w, /images/GIAY-PHEP-MAT-MA-DAN-SU-1024x1463.jpg 1024w, /images/GIAY-PHEP-MAT-MA-DAN-SU-320x457.jpg 320w, /images/GIAY-PHEP-MAT-MA-DAN-SU-1200x1715.jpg 1200w"
                     sizes="(max-width: 1229px) 100vw, 1229px">
                 </figure>
               </div>
               <div class="cell cell-right">
-                <h2 class="heading-title">
+                <h1 class="heading-title">
                   Giấy Phép Kinh Doanh Sản Phẩm, Dịch Vụ Mật Mã Dân Sự (MMDS)
-                </h2>
+                </h1>
                 <div class="_desc">
-                  <p><strong>Vi Na là một trong số ít đơn vị được Ban Cơ Yếu cấp phép kinh doanh sản phẩm, dịch vụ mật
-                      mã dân sự theo Giấy phép số 14/2018/GPKD-BCY ngày 24/4/2018, gồm các dịch vụ sau:</strong></p>
+                  <p><strong>Vi Na là một trong số ít doanh nghiệp tại Việt Nam được Ban Cơ Yếu Chính phủ cấp phép kinh doanh sản phẩm, dịch vụ mật mã dân sự, theo Giấy phép số 14/2018/GPKD-BCY ngày 24/04/2018.</strong></p>
+                  <p>Theo phạm vi giấy phép được cấp, Vi Na cung cấp các dịch vụ:</p>
                   <ul>
                     <li>Dịch vụ kiểm định, đánh giá sản phẩm MMDS.</li>
                     <li>Dịch vụ tư vấn bảo mật, an toàn thông tin mạng sử dụng sản phẩm MMDS.</li>
@@ -76,7 +76,7 @@
           </div>
           <div class="hb_product_box5">
             <h2 class="heading-title">
-              Tư Vấn, Hỗ Trợ Pháp Lý Xin Giấy Phép <br>
+              TƯ VẤN, HỖ TRỢ PHÁP LÝ XIN GIẤY PHÉP <br>
               Mật Mã Dân Sự Cho Doanh Nghiệp.
             </h2>
             <div class="flex flex-x flex-info">
@@ -84,7 +84,7 @@
                 <div class="_desc">
                   <h3>Tư vấn - hỗ trợ Doanh nghiệp</h3>
                   <ul>
-                    <li><strong>Đánh giá đặc tính kỹ thuật của sản phẩm:</strong> Vi Na có thể giúp đánh giá sản phẩm
+                    <li>Đánh giá đặc tính kỹ thuật của sản phẩm:</strong> Vi Na có thể giúp đánh giá sản phẩm
                       của doanh nghiệp và xác định liệu sản phẩm đó thuộc diện cần xin giấy phép mật mã dân sự hay giấy
                       phép an toàn thông tin mạng, hay không cần xin bất kỳ giấy phép nào.</li>
                     <li><strong>Đánh giá điều kiện hiện tại và tư vấn khắc phục:</strong> Vi Na có thể đánh giá sơ bộ
@@ -161,13 +161,13 @@
           <div class="cell cell-images">
             <span class="img desktop-img">
               <img width="2560" height="1012" src="/images/Group-2144770227-2-1-scaled.jpg"
-                class="attachment-full size-full" alt="Group 2144770227 (2) (1)" decoding="async"
+                class="attachment-full size-full" alt="Form đăng ký tư vấn dịch vụ mật mã dân sự" decoding="async"
                 srcset="/images/Group-2144770227-2-1-scaled.jpg 2560w, /images/Group-2144770227-2-1-640x253.jpg 640w, /images/Group-2144770227-2-1-1024x405.jpg 1024w, /images/Group-2144770227-2-1-320x126.jpg 320w, /images/Group-2144770227-2-1-1920x759.jpg 1920w, /images/Group-2144770227-2-1-1200x474.jpg 1200w"
                 sizes="(max-width: 2560px) 100vw, 2560px">
             </span>
             <span class="img mobile-img">
               <img width="2560" height="1012" src="/images/Group-2144770227-2-1-scaled.jpg"
-                class="attachment-full size-full" alt="Group 2144770227 (2) (1)" decoding="async" loading="lazy"
+                class="attachment-full size-full" alt="Form đăng ký tư vấn dịch vụ mật mã dân sự" decoding="async" loading="lazy"
                 srcset="/images/Group-2144770227-2-1-scaled.jpg 2560w, /images/Group-2144770227-2-1-640x253.jpg 640w, /images/Group-2144770227-2-1-1024x405.jpg 1024w, /images/Group-2144770227-2-1-320x126.jpg 320w, /images/Group-2144770227-2-1-1920x759.jpg 1920w, /images/Group-2144770227-2-1-1200x474.jpg 1200w"
                 sizes="(max-width: 2560px) 100vw, 2560px">
             </span>
