--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -32,35 +32,35 @@
 						<div class="footer-img"><img width="84" height="84"
 								src="/images/Group-2144770292.png"
 								alt="Group 2144770292" loading="lazy" decoding="async"></div><a class="_button"
-							href="https://www.facebook.com/share/17FHmK8sk2/" title="" target="_blank"
-							rel="noopener noreferrer nofollow"></a>
+							href="https://www.facebook.com/share/17FHmK8sk2/" title="Facebook" target="_blank"
+							rel="noopener noreferrer nofollow" aria-label="Visit our Facebook page"></a>
 					</li>
 					<li>
 						<div class="footer-img"><img width="84" height="84"
 								src="/images/Group-2144770293.png"
 								alt="Group 2144770293" loading="lazy" decoding="async"></div><a class="_button"
-							href="https://www.youtube.com/" title="" target="_blank"
-							rel="noopener noreferrer nofollow"></a>
+							href="https://www.youtube.com/" title="Youtube" target="_blank"
+							rel="noopener noreferrer nofollow" aria-label="Visit our YouTube channel"></a>
 					</li>
 					<li>
 						<div class="footer-img"><img width="84" height="84"
 								src="/images/Group-2144770294.png"
 								alt="Group 2144770294" loading="lazy" decoding="async"></div><a class="_button"
-							href="https://www.instagram.com/" title="" target="_blank"
-							rel="noopener noreferrer nofollow"></a>
+							href="https://www.instagram.com/" title="Instagram" target="_blank"
+							rel="noopener noreferrer nofollow" aria-label="Visit our Instagram profile"></a>
 					</li>
 					<li>
 						<div class="footer-img"><img width="84" height="84"
 								src="/images/Group-2144770295.png"
 								alt="Group 2144770295" loading="lazy" decoding="async"></div><a class="_button"
-							href="https://www.tiktok.com/" title="" target="_blank"
-							rel="noopener noreferrer nofollow"></a>
+							href="https://www.tiktok.com/" title="Tiktok" target="_blank"
+							rel="noopener noreferrer nofollow" aria-label="Visit our TikTok channel"></a>
 					</li>
 					<li>
 						<div class="footer-img"><img width="84" height="84"
 								src="/images/Group-2144770296.png"
 								alt="Group 2144770296" loading="lazy" decoding="async"></div><a class="_button"
-							href="https://twitter.com" title="" target="_blank" rel="noopener noreferrer nofollow"></a>
+							href="https://twitter.com" title="Twitter" target="_blank" rel="noopener noreferrer nofollow" aria-label="Visit our Twitter profile"></a>
 					</li>
 				</ul>
 			</div>
