feat: image fils optimized

--- a/public/css/index-css.css
+++ b/public/css/index-css.css
@@ -16143,7 +16143,7 @@ body {
     padding: 8px 12px;
     border-radius: 20px;
     transition: background-color 0.3s ease;
-    background-color: #FFA500
+    background-color: #FB8317
 }
 
 .hb_header_button ._header-button:hover {
