--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -71,4 +71,5 @@
             cursor: pointer;
         }
     </style>
+    <link rel="preload" as="image" href="/images/banner-mmds.webp">
 </head>
