--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,7 +2,7 @@
     <div class="container header-inner">
         <div class="site-branding fade-in">
             <a href="/" class="custom-logo-link navbar-brand" rel="home">
-                <img src="/images/smart-sign-logo.png" alt="SmartSign Logo" loading="lazy" decoding="async" width="200" height="60">
+                <img src="/images/smart-sign-logo.png" alt="SmartSign Logo" fetchpriority="high" decoding="async" width="200" height="60">
             </a>
         </div>
 
