--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -29,47 +29,46 @@
 				</div>
 				<ul class="footer-icon-list">
 					<li>
-						<div class="footer-img"><img width="84" height="84"
-								src="/images/Group-2144770292.png"
+						<div class="footer-img"><img width="84" height="84" src="/images/Group-2144770292.png"
 								alt="Group 2144770292" loading="lazy" decoding="async"></div><a class="_button"
 							href="https://www.facebook.com/share/17FHmK8sk2/" title="Facebook" target="_blank"
 							rel="noopener noreferrer nofollow" aria-label="Visit our Facebook page"></a>
 					</li>
 					<li>
-						<div class="footer-img"><img width="84" height="84"
-								src="/images/Group-2144770293.png"
+						<div class="footer-img"><img width="84" height="84" src="/images/Group-2144770293.png"
 								alt="Group 2144770293" loading="lazy" decoding="async"></div><a class="_button"
 							href="https://www.youtube.com/" title="Youtube" target="_blank"
 							rel="noopener noreferrer nofollow" aria-label="Visit our YouTube channel"></a>
 					</li>
 					<li>
-						<div class="footer-img"><img width="84" height="84"
-								src="/images/Group-2144770294.png"
+						<div class="footer-img"><img width="84" height="84" src="/images/Group-2144770294.png"
 								alt="Group 2144770294" loading="lazy" decoding="async"></div><a class="_button"
 							href="https://www.instagram.com/" title="Instagram" target="_blank"
 							rel="noopener noreferrer nofollow" aria-label="Visit our Instagram profile"></a>
 					</li>
 					<li>
-						<div class="footer-img"><img width="84" height="84"
-								src="/images/Group-2144770295.png"
+						<div class="footer-img"><img width="84" height="84" src="/images/Group-2144770295.png"
 								alt="Group 2144770295" loading="lazy" decoding="async"></div><a class="_button"
 							href="https://www.tiktok.com/" title="Tiktok" target="_blank"
 							rel="noopener noreferrer nofollow" aria-label="Visit our TikTok channel"></a>
 					</li>
 					<li>
-						<div class="footer-img"><img width="84" height="84"
-								src="/images/Group-2144770296.png"
+						<div class="footer-img"><img width="84" height="84" src="/images/Group-2144770296.png"
 								alt="Group 2144770296" loading="lazy" decoding="async"></div><a class="_button"
-							href="https://twitter.com" title="Twitter" target="_blank" rel="noopener noreferrer nofollow" aria-label="Visit our Twitter profile"></a>
+							href="https://twitter.com" title="Twitter" target="_blank"
+							rel="noopener noreferrer nofollow" aria-label="Visit our Twitter profile"></a>
 					</li>
 				</ul>
 			</div>
 			<div class="cell cell-box-3">
 				<p class="footer-title">Xem bản đồ</p>
 				<div class="footer-desc">
-					<p><iframe loading="lazy" style="border: 0;"
+					<p>
+						<iframe title="Bản đồ vị trí Công ty Cổ phần Chữ Ký Số Vi Na" loading="lazy" style="border: 0;"
 							src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3919.2565422176413!2d106.69186807584111!3d10.79165298935808!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x317528cb7c7c0a71%3A0x3c419e30522ce845!2zQ8OUTkcgVFkgQ-G7lCBQSOG6pk4gQ0jhu64gS8OdIFPhu5AgVkkgTkE!5e0!3m2!1svi!2s!4v1760069946668!5m2!1svi!2s"
-							width="100%" height="450" allowfullscreen="allowfullscreen"></iframe></p>
+							width="100%" height="450" allowfullscreen>
+						</iframe>
+					</p>
 				</div>
 			</div>
 		</div>
