--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -72,4 +72,5 @@
         }
     </style>
     <link rel="preload" as="image" href="/images/banner-mmds.webp">
+    <% if (typeof styles !== 'undefined') { %><%- styles %><% } %>
 </head>
