feat: add logo Da thong bao BCT

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -69,6 +69,14 @@
 							width="100%" height="450" allowfullscreen>
 						</iframe>
 					</p>
+					<!-- Hình có link -->
+					<p style="margin-top: 15px; text-align: left;">
+						<a href="http://online.gov.vn/Home/WebDetails/138752?AspxAutoDetectCookieSupport=1"
+							target="_blank" rel="nofollow noopener">
+							<img src="/images/logo-da-thong-bao-bo-cong-thuong-mau-xanh.png"
+								alt="Đã thông báo Bộ Công Thương" style="max-width: 200px; height: auto;">
+						</a>
+					</p>
 				</div>
 			</div>
 		</div>
